引入计时器统计性能